--- a/styles.css
+++ b/styles.css
@@ -969,10 +969,6 @@ input[type="range"].form-range:focus::-ms-thumb {
     width: 100%;
 }
 
-#prowizjaGroup .sub-info::after {
-    content: "Prowizja: 10 000,00 zł" !important;
-}
-
 .opis-container {
     margin-top: 20px;
     text-align: center;
@@ -1581,7 +1577,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .input-group-text.unit-miesiacu {
-        width: 60px;
+        width: 60px !important;
         min-width: 60px;
         margin: 0;
         padding: 0 2px;
@@ -1603,7 +1599,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     }
 
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .input-group-text.unit-zl {
-        width: 60px;
+        width: 60px !important;
         min-width: 60px;
         margin: 0;
         padding: 0 2px;
