--- a/styles.css
+++ b/styles.css
@@ -302,7 +302,7 @@ body {
     width: 109px;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .input-group {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
@@ -310,14 +310,14 @@ body {
     align-items: center;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-control {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-control {
     width: 69px;
     margin: 0;
     padding: 0 2px;
     border-right: none;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .input-group-text.unit-miesiacu {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group-text.unit-miesiacu {
     width: 40px;
     min-width: 40px;
     margin: 0;
@@ -633,32 +633,32 @@ input[type="range"].form-range:focus::-ms-thumb {
 }
 
 /* Płynny suwak w W/OD */
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range {
     transition: all 0.2s ease;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-webkit-slider-runnable-track {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-webkit-slider-runnable-track {
     background: var(--input-group-bg);
     height: 6px;
     border-radius: var(--border-radius);
     transition: background 0.2s ease;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-moz-range-track {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-moz-range-track {
     background: var(--input-group-bg);
     height: 6px;
     border-radius: var(--border-radius);
     transition: background 0.2s ease;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-ms-track {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-ms-track {
     background: var(--input-group-bg);
     height: 6px;
     border-radius: var(--border-radius);
     transition: background 0.2s ease;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-webkit-slider-thumb {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-webkit-slider-thumb {
     background: var(--accent-gradient-start);
     width: 11px;
     height: 11px;
@@ -671,7 +671,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     will-change: transform;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-moz-range-thumb {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-moz-range-thumb {
     background: var(--accent-gradient-start);
     width: 11px;
     height: 11px;
@@ -682,7 +682,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     will-change: transform;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-ms-thumb {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-ms-thumb {
     background: var(--accent-gradient-start);
     width: 11px;
     height: 11px;
@@ -693,7 +693,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     will-change: transform;
 }
 
-.variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-moz-range-progress {
+.variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-moz-range-progress {
     background: var(--accent-gradient-start);
     height: 6px;
     border-radius: var(--border-radius);
@@ -784,28 +784,28 @@ input[type="range"].form-range:focus::-ms-thumb {
     transform: scale(1.1);
 }
 
-.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-webkit-slider-runnable-track {
+.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-webkit-slider-runnable-track {
     background: var(--input-group-bg);
     height: 6px;
     border-radius: var(--border-radius);
     transition: background 0.2s ease;
 }
 
-.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-moz-range-track {
+.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-moz-range-track {
     background: var(--input-group-bg);
     height: 6px;
     border-radius: var(--border-radius);
     transition: background 0.2s ease;
 }
 
-.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-ms-track {
+.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-ms-track {
     background: var(--input-group-bg);
     height: 6px;
     border-radius: var(--border-radius);
     transition: background 0.2s ease;
 }
 
-.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-webkit-slider-thumb {
+.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-webkit-slider-thumb {
     background: var(--accent-gradient-start-black);
     width: 11px;
     height: 11px;
@@ -818,7 +818,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     will-change: transform;
 }
 
-.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-moz-range-thumb {
+.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-moz-range-thumb {
     background: var(--accent-gradient-start-black);
     width: 11px;
     height: 11px;
@@ -829,7 +829,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     will-change: transform;
 }
 
-.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-ms-thumb {
+.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-ms-thumb {
     background: var(--accent-gradient-start-black);
     width: 11px;
     height: 11px;
@@ -840,7 +840,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     will-change: transform;
 }
 
-.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-range::-moz-range-progress {
+.dark-mode .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-range::-moz-range-progress {
     background: var(--accent-gradient-start-black);
     height: 6px;
     border-radius: var(--border-radius);
@@ -1481,7 +1481,7 @@ input[type="range"].form-range:focus::-ms-thumb {
     .form-control,
     .form-select,
     .input-group-text {
-        font-size: 0.6375em;
+        font-size: 0.637 арти5em;
     }
 
     .form-label,
@@ -1564,8 +1564,16 @@ input[type="range"].form-range:focus::-ms-thumb {
         box-sizing: border-box;
     }
 
-    /* Specyficzne style dla boxu OD/W */
-    .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .input-group {
+    /* Ustawienie szerokości dla .form-select w sekcji NADPŁATA KREDYTU */
+    .variable-input-group[data-type="nadplata"] .form-select {
+        width: 160px !important;
+        margin: 0;
+        padding: 0 2px;
+        box-sizing: border-box;
+    }
+
+    /* Specyficzne style dla boxu OD/W (trzeci form-group) */
+    .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group {
         width: 160px !important;
         max-width: 160px !important;
         min-width: 160px !important;
@@ -1575,7 +1583,7 @@ input[type="range"].form-range:focus::-ms-thumb {
         position: relative;
     }
 
-    .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-control {
+    .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-control {
         width: 160px !important;
         margin: 0;
         padding: 0 2px;
@@ -1584,7 +1592,7 @@ input[type="range"].form-range:focus::-ms-thumb {
         border-radius: var(--border-radius);
     }
 
-    .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .input-group-text.unit-miesiacu {
+    .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .input-group-text.unit-miesiacu {
         width: 60px !important;
         min-width: 60px !important;
         margin: 0;
@@ -1598,7 +1606,7 @@ input[type="range"].form-range:focus::-ms-thumb {
         pointer-events: none;
     }
 
-    /* Specyficzne style dla boxu KWOTA */
+    /* Specyficzne style dla boxu KWOTA (czwarty form-group) */
     .variable-input-group[data-type="nadplata"] .form-group:nth-child(4) .input-group {
         width: 160px !important;
         max-width: 160px !important;
@@ -1632,8 +1640,8 @@ input[type="range"].form-range:focus::-ms-thumb {
         pointer-events: none;
     }
 
-    .variable-input-group[data-type="nadplata"] .form-group:nth-child(2) .form-label,
-    .variable-input-group[data-type="nadplata"] .form-group:nth-child(3) .form-label {
+    .variable-input-group[data-type="nadplata"] .form-group:nth-child(1) .form-label,
+    .variable-input-group[data-type="nadplata"] .form-group:nth-child(2) .form-label {
         text-align: left;
         width: 100%;
     }
